# SkyOS

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SARGA_OS_DESIGN_QA.md  SKYOS_E2E_PLAN.md  SKYSTORE_GUIDE.md  aarch64-sarga.json  aarch64-sarga.ld  build.ps1  build.sh  build_disk.py  build_initrd.py  build_userspace.ps1  check_init.py  fix.py  input.txt  make_bootimage.ps1  make_bootimage.sh  make_installer_iso.py  plan.md  rebuild_initrd.ps1  run.ps1  run.sh  run_qemu_display.ps1  run_test_nographic.ps1  sarga.ld  test_fat32.py  x86_64-sarga.json
.cargo/: config.toml
.github/workflows/: build-kernel.yml  build-release-iso.yml  build-userspace.yml  build.yml  system-updates.yml
ade/: Cargo.toml
ade/src/: main.rs
aicli/: Cargo.toml
aicli/src/: main.rs
archive/: Cargo.toml
archive/src/: main.rs
calculator/: Cargo.toml
calculator/src/: main.rs
calendar/: Cargo.toml
calendar/src/: main.rs
clock/: Cargo.toml
clock/src/: main.rs
coreutils/: Cargo.toml
coreutils/src/: awk.rs  basename.rs  cat.rs  chmod.rs  chown.rs  cp.rs  cut.rs  date.rs  dd.rs  df.rs  diff.rs  dirname.rs  du.rs  echo.rs  env.rs  false.rs  find.rs  free.rs  grep.rs  gzip.rs  head.rs  hexdump.rs  hostname.rs  id.rs  kill.rs  ln.rs  login.rs  ls.rs  lspci.rs  mkdir.rs  mkfs_sargafs.rs  mkfs_skyfs.rs  mount.rs  mv.rs  nl.rs  od.rs  passwd.rs  patch.rs  ping.rs  ps.rs  (+23 more)
disk/: create_disk.sh
docs/: ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DRIVER_MODEL.md  MEMORY_MAP.md  SCHEDULER.md  SYSCALL_ABI.md  SYSTEM_UPDATES.md  VFS_DESIGN.md  index.md  korlang_abi.md
docs/api/: driver_api.md  gui_syscalls.md  libc_api.md  syscall_exec.md  syscall_mmap.md  syscall_open.md  syscall_read.md  syscall_write.md  syscalls_overview.md  vfs_api.md
docs/architecture/: interrupts.md  ipc.md  memory.md  overview.md  process.md  scheduling.md  smp.md  sync.md  syscall.md  time.md
docs/contributing/: changelog.md  code_of_conduct.md  coding_standards.md  communication.md  first_contribution.md  issue_tracking.md  license.md  maintainers.md  pull_requests.md  review_process.md
docs/design/: async_model.md  driver_model.md  elf_loading.md  error_handling.md  gui_architecture.md  memory_safety.md  networking_stack.md  philosophy.md  vfs_design.md  why_rust.md
docs/drivers/: acpi.md  e1000.md  graphics.md  keyboard.md  mouse.md  overview.md  pci.md  ps2.md  rtc.md  virtio_net.md
docs/future/: long_term.md  phase1_stable.md  phase2_networking.md  phase3_gui.md  phase4_userspace.md  phase5_drivers.md  phase6_security.md  phase7_performance.md  phase8_portability.md  roadmap.md
docs/guide/: adding_syscall.md  coding_style.md  contributing.md  debugging.md  getting_started.md  qemu_setup.md  testing.md  userspace.md  vfs_guide.md  writing_driver.md
docs/reference/: elf.md  file_formats.md  glossary.md  io_ports.md  irq_table.md  memory_map.md  pci_ids.md  ps2_codes.md  uefi.md  x86_64.md
docs/security/: audit_process.md  capabilities.md  future_security.md  memory_protection.md  overview.md  sandboxing.md  secure_boot.md  syscall_security.md  user_isolation.md  vulnerability_reporting.md
docs/syscalls/: file_syscalls.md  gui_syscalls.md  index.md  io_syscalls.md  mem_syscalls.md  misc_syscalls.md  net_syscalls.md  proc_syscalls.md  time_syscalls.md  uid_gid.md
docs/testing/: ci_cd.md  coverage.md  integration.md  memory_testing.md  network_testing.md  overview.md  regression.md  stress_testing.md  syscall_testing.md  unit_tests.md
init/: Cargo.toml
init/src/: main.rs
installer/: Cargo.toml
installer/src/: main.rs
installer_data/: README.TXT
libc/: Cargo.toml
libc/src/: crt0.rs  errno.rs  heap.rs  lib.rs  pthread.rs  stdio.rs  syscall.rs
libsarga/: Cargo.toml
libsarga/src/: ai.rs  args.rs  button.rs  checkbox.rs  combobox.rs  dialog.rs  errno.rs  fs.rs  gpu.rs  gui.rs  hash.rs  io.rs  label.rs  layout.rs  lib.rs  mem.rs  menubar.rs  net.rs  png.rs  posix.rs  process.rs  progress_bar.rs  scrollbar.rs  slider.rs  start.rs  stdio.rs  sync.rs  syscall.rs  tab_widget.rs  textbox.rs  theme.rs  thread.rs  vahiai.rs  widget.rs
libskyaudio/: Cargo.toml
libskyaudio/src/: lib.rs
libskyos/: Cargo.toml
libskyos/src/: lib.rs  net.rs
login/: Cargo.toml
login-manager/: Cargo.toml
login-manager/src/: main.rs
login/src/: main.rs
nettools/: Cargo.toml
nettools/src/: curl.rs  echod.rs  ifconfig.rs  nc.rs  resolve.rs
notes/: Cargo.toml
notes/src/: main.rs
paint/: Cargo.toml
paint/src/: main.rs
passwd/: Cargo.toml
passwd/src/: main.rs
proc/: Cargo.toml
proc/src/: main.rs
sarga-term/: Cargo.toml
sarga-term/src/: main.rs
sargad/: Cargo.toml
sargad/src/: main.rs
sargaedit/: Cargo.toml
sargaedit/src/: main.rs
sargafiles/: Cargo.toml
sargafiles/src/: main.rs
sargasettings/: Cargo.toml
sargasettings/src/: main.rs
sargash/: Cargo.toml
sargash/src/: main.rs
sargaview/: Cargo.toml
sargaview/src/: main.rs
sash/: Cargo.toml
sash/src/: builtins.rs  executor.rs  kor_bridge.rs  main.rs  parser.rs  readline.rs  scripting.rs
scripts/: analyze_kernel_size.py  build_installer_iso.py  build_installer_iso.sh  check_esp.py  check_iso.py  clean_all.ps1  debug_iso.py  dev_loop.ps1  list.md  make_initrd.py  make_sarga_image.py  parse_qemu_log.py  release_build.ps1  run_gdb.ps1  setup_dev.ps1  setup_dev.sh  size_report.py  test_all.ps1  update_binaries.ps1  verify_iso.py
scripts/debug/: README.md  check_elf.py  check_init.py  check_str.py  check_str2.py  check_str3.py  check_str4.py  check_str5.py
search/: Cargo.toml
search/src/: main.rs
setup/: Cargo.toml
setup/src/: main.rs
skybuild/: Cargo.toml
skybuild/src/: main.rs
skyd/: Cargo.toml
skyd-update/: Cargo.toml
skyedit/: Cargo.toml
skyfiles/: Cargo.toml
skypkg/: Cargo.toml
skysettings/: Cargo.toml
skystore/: Cargo.toml
skyview/: Cargo.toml
spkg/: Cargo.toml
svc/: Cargo.toml
sysinfo/: Cargo.toml
sysmon/: Cargo.toml
tasks/: Cargo.toml
tests/: test_boot.ps1  test_login.ps1  test_panic.ps1
vahid/: Cargo.toml
(+15 files in other folders)
