[workspace]
members = [
    "libsarga",
    "sash",
    "init",
    "ade",
    "coreutils",
    "spkg",
    "nettools",
    "aicli",
    "proc",
    "sarga-term",
    "sargaedit",
    "calculator",
    "sargafiles",
    "sargasettings",
    "sargad",
    "sargaview",
    "login-manager",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
