[workspace]
members = [
    "libsarga",
    "sash",
    "init",
    "ade",
    "coreutils",
    "spkg",
    "nettools",
    "aicli",
    "proc",
    "sarga-term",
    "sargaedit",
    "calculator",
    "sargafiles",
    "sargasettings",
    "sargad",
    "sargaview",
    "login-manager",
    "skystore",
    "sysmon",
    "calendar",
    "notes",
    "paint",
    "sysinfo",
    "clock",
    "tasks",
    "archive",
    "search",
    "installer",
    "skyd-update",
    "libc",
    "sargash",
    "svc",
    "vahid",
    "libskyaudio",
    "login",
    "passwd",
    "skybuild",
    "setup",
    "skypkg",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
