[package]
name = "libsarga"
version = "0.1.0"
edition = "2021"

[dependencies]
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
ttf-parser = { version = "0.20", default-features = false }
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }
